新增发布评论邮件通知功能

--- a/web_admin/index.html
+++ b/web_admin/index.html
@@ -51,7 +51,7 @@ Q.init({
 </script>
 <script>
     var comment_w_config = {
-        "api": "https://comment.wangtwothree.com/api",
+        "api": "http://127.0.0.1:1204",
         "sid": 1,
         "key": "HelloWorld"
     }
