--- a/web_admin/wang.html
+++ b/web_admin/wang.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="static/js/itorr.js"></script>
 <script type="text/javascript" src="static/js/q.js"></script>
 <script type="text/javascript">
-var api = 'https://comment.wangtwothree.com/api';
+var api = 'http://127.0.0.1:1204';
 var staticPath = '';
 var user = {};
 var site_id = 0;
