--- a/web_admin/templet/home.html
+++ b/web_admin/templet/home.html
@@ -1,5 +1,7 @@
 # Comment.W
 
+![Comment.W](https://cdn.wangtwothree.com/imgur/cnlax7n.jpg=900 "Comment.W")
+
 一款轻量、简洁、高效的前后端分离评论系统，专注评论，简单易用！
 
 Comment.W 诞生于 2022 年 7 月 23 日，为个人业余时间开发，第一版本耗时两周，会持续更新（但是不会添加花里胡哨跟评论无关的功能）。
